updates docs in demo app for @DomainObject#entityPropertyChange.

--- a/examples/demo/domain/src/main/resources/static/css/application.css
+++ b/examples/demo/domain/src/main/resources/static/css/application.css
@@ -281,7 +281,12 @@ div.listingblock div.title {
 }
 
 /* customized Prism theme COY */
-.listingblock pre[class*="language-"]::after, 
+.listingblock pre[class*="language-"]::after,
 .listingblock pre[class*="language-"]::before {
 	box-shadow: none;
+}
+
+
+div.sectionbody > div.ulist {
+    margin-left: 10px;
 }
