CAUSEWAY-3401: adds 'ban' icon with tooltip holding disabled-reason info

--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -91,6 +91,14 @@
 				<!-- input format (when read-only) -->
 				<wicket:container 
 					wicket:id="container-scalarValue" />
+					
+				<div class="btn-group btn-group-sm" role="group">
+       				<!-- additional buttons -->
+       				<button wicket:id="scalarValueView-buttons" 
+       					class="btn" type="button">
+					</button>
+       			</div>
+            		
 			</span> 
 		</wicket:fragment>
 		
