CAUSEWAY-3401: always show disabled reason in prototyping mode

--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
@@ -583,6 +583,10 @@ div.additionalLinkList {
 
 }
 
+.icon-prototyping {
+    color: silver;
+}
+
 /* dropdown-menu: distinguished rendering for disabled menu-items
    (assuming grey foreground text color is reasonable to apply to light as well as dark themes) */
 .dropdown-menu > .disabled > a,
