CAUSEWAY-2485: improves @DomainObjectLayout#cssClass

--- a/examples/demo/domain/src/main/resources/static/css/application.css
+++ b/examples/demo/domain/src/main/resources/static/css/application.css
@@ -290,3 +290,15 @@ div.listingblock div.title {
 div.sectionbody > div.ulist {
     margin-left: 10px;
 }
+
+tr.even.custom > td,
+tr.odd.custom > td,
+.entityPage.custom .iconAndTitle span
+{
+    font-style: italic;
+    color: orangered;
+}
+
+.line-through {
+    text-decoration: line-through;
+}
