CAUSEWAY-3406: wkt vwr: font awesome support f. bookmark panel

--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/bookmarkedpages/BookmarkedPagesPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/bookmarkedpages/BookmarkedPagesPanel.html
@@ -46,6 +46,7 @@
                                                     <div>
                                                         <a href="#" wicket:id="bookmarkedPageLink">
                                                             <div class="bookmarkedPageImageAndTitle d-inline-block">
+                                                                <span wicket:id="bookmarkedPageFontAwesome"></span>
                                                                 <img wicket:id="bookmarkedPageImage" class="bookmarkedPageImage"/>
                                                                 <span wicket:id="bookmarkedPageTitle" class="bookmarkedPageTitle">[link title]</span>
                                                             </div>
