CAUSEWAY-3401: css fix for additional buttons
- top align button group in the context of non-editable properties

--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -92,7 +92,7 @@
 				<wicket:container 
 					wicket:id="container-scalarValue" />
 					
-				<div class="btn-group btn-group-sm" role="group">
+				<div class="btn-group btn-group-sm additionalButtons" role="group">
        				<!-- additional buttons -->
        				<button wicket:id="scalarValueView-buttons" 
        					class="btn" type="button">
