--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/common/bootstrap/css/bootstrap-overrides-all-v2.css
@@ -560,6 +560,11 @@ span.containedButtonPanel {
 	margin-right: 2px;
 }
 
+/** top alignment for additional buttons on scalar value inputs */
+.scalarValueInput .additionalButtons .btn-group {
+  vertical-align: top;
+}
+
 /* from additionalLinksPanel.css */
 
 .additionalLinkList {
