CAUSEWAY-3425: fixes repaint decision logic

--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -75,7 +75,7 @@
 	                		<button type="button" class="btn btn-primary">
 	                			<i class="fa-solid fa-edit"></i></button>
                 			
-	                		<!-- additional buttons -->	
+	                		<!-- additional buttons (scalarValueInlinePromptLink) -->	
             				<button wicket:id="scalarValueInlinePromptLink-buttons" 
             					class="btn" type="button">
 							</button>
@@ -93,7 +93,7 @@
 					wicket:id="container-scalarValue" />
 					
 				<div class="btn-group btn-group-sm additionalButtons" role="group">
-       				<!-- additional buttons -->
+       				<!-- additional buttons (scalarValueView) -->
        				<button wicket:id="scalarValueView-buttons" 
        					class="btn" type="button">
 					</button>
@@ -111,7 +111,7 @@
 				<!-- honor bootstrap modal dialog z-index of 1055-->
 				<span class="position-absolute top-0 end-0" style="z-index: 1080;"> 
            			<div class="btn-group btn-group-sm shadow" role="group">
-           				<!-- additional buttons -->
+           				<!-- additional buttons (scalarValueInput) -->
          				<button wicket:id="scalarValueInput-buttons" 
          					class="btn" type="button">
 						</button>
